--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 
-        <link href="bootstrap.min.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
 
-        <link href="bootstrap-icons.css" rel="stylesheet">
+        <link href="css/bootstrap-icons.css" rel="stylesheet">
 
-        <link href="magnific-popup.css" rel="stylesheet">
+        <link href="css/magnific-popup.css" rel="stylesheet">
 
-        <link href="jitendraghodela/jg-first-portfolio-style.css" rel="stylesheet">
+        <link href="css/jg-first-portfolio-style.css" rel="stylesheet">
         
 <!--
 
