--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <link href="css/magnific-popup.css" rel="stylesheet">
 
-        <link href="jitendraghodela.github.io/css/jg-first-portfolio-style.css" rel="stylesheet">
+        <link href="css/jg-first-portfolio-style.css" rel="stylesheet">
         
 
     </head>
