--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                                     <h3 class="projects-title">Apexjive Solutions</h3>
                                 </div>
 
-                                <a href="images/projects/ajs.gif" class="popup-image">
+                                <a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjdttXso_iJBQL6ydTnkHDP4lbFW3J3BouiZj332WFKDtkvDyTzJTcRwgHdgsx7iM_LGxJ8kFw1mvGqGCHxzwBMSjv7BerphmRmIhr_-tjJCMJoDK8bd-nXbNVxxnfcGIc6LNBRylTclBNKc49VQPfcwlof_QHGeAGs0KqbEYls4KXk2whUKbNlqX5P/s70/web%20bachground.gif" class="popup-image">
                                     <img src="images/projects/ajs.gif" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
