--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                                     <h3 class="projects-title">Apexjive Solutions</h3>
                                 </div>
 
-                                <a href="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYzVkZmU0YTU0OGQ4NGZjNjQyYjg1YWUwYTlhNmM4OTE1Mzc5M2ExMiZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PWc/V64DgNtDlUQEPppLLO/giphy-downsized-large.gif" class="popup-image">
+                                <a href="https://i.giphy.com/media/V64DgNtDlUQEPppLLO/giphy-downsized-large.gif" class="popup-image">
                                     <img src="images/projects/ajs.gif" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
