--- a/index.html
+++ b/index.html
@@ -374,10 +374,10 @@
                                 <div class="projects-info">
                                     <small class="projects-tag">Branding</small>
 
-                                    <h3 class="projects-title">Apexjive Solutions</h3>
+                                    <h3 class="projects-title">Jitendra Ghodela</h3>
                                 </div>
 
-                                <a href="https://i.giphy.com/media/V64DgNtDlUQEPppLLO/giphy-downsized-large.gif" class="popup-image">
+                                <a href="https://yt3.ggpht.com/o6_y_1slaevgf9RJJgBgdhSjFXV17LNv47u5yBJpDchqcoDQyzDJCREZgrzb0e3lgeQAXKsK_u9Y=s500-c-fcrop64=1,00000000ffffffff-nd-v1" class="popup-image">
                                     <img src="images/projects/ajs.gif" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
