--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                                     <h3 class="projects-title">Jitendra Ghodela</h3>
                                 </div>
 
-                                <a href="images/jg.png" class="popup-image">
+                                <a href="images/JG.png" class="popup-image">
                                     <img src="images/projects/ajs.gif" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
