--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                                 </div>
 
                                 <a href="images/JG.png" class="popup-image">
-                                    <img src="images/projects/ajs.gif" class="projects-image img-fluid" alt="">
+                                    <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYzVkZmU0YTU0OGQ4NGZjNjQyYjg1YWUwYTlhNmM4OTE1Mzc5M2ExMiZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PWc/V64DgNtDlUQEPppLLO/giphy-downsized-large.gif" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
                         </div>
