--- a/index.html
+++ b/index.html
@@ -374,10 +374,10 @@
                                 <div class="projects-info">
                                     <small class="projects-tag">Branding</small>
 
-                                    <h3 class="projects-title">Jitendra Ghodela</h3>
+                                    <h3 class="projects-title">ApexJive Solutions</h3>
                                 </div>
 
-                                <a href="images/JG.png" class="popup-image">
+                                <a href="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYzVkZmU0YTU0OGQ4NGZjNjQyYjg1YWUwYTlhNmM4OTE1Mzc5M2ExMiZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PWc/V64DgNtDlUQEPppLLO/giphy-downsized-large.gif" class="popup-image">
                                     <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYzVkZmU0YTU0OGQ4NGZjNjQyYjg1YWUwYTlhNmM4OTE1Mzc5M2ExMiZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PWc/V64DgNtDlUQEPppLLO/giphy-downsized-large.gif" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
