--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                     <div class="col-lg-12 col-12">
                         <div class="copyright-text-wrap">
                             <p class="mb-0">
-                                <span class="copyright-text">Copyright © 2023 <a href="https://jitendraghodela.github.io/">Jitendra Ghodela</a> Company. All rights reserved.</span>
+                                <span class="copyright-text">Copyright © 2023 <a href="https://jitendraghodela.github.io/">Jitendra Ghodela</a> All rights reserved.</span>
                                 
                             </p>
                         </div>
