--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
 
                                     <p>
                                         <span class="profile-small-title">Email</span> 
-                                        <span><a href="mailto:apexjivesolution@gmail.com">apexjivesolution@gmail.com</a></span>
+                                        <span><a href="mailto:apexjivesolution@gmail.com">serpdigisolution@gmail.com
+</a></span>
                                     </p>
                                 </div>
                             </div>
