--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
         <link href="css/jg-first-portfolio-style.css" rel="stylesheet">
         
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1953071189053008"
+     crossorigin="anonymous"></script>
     </head>
     
     <body>
