--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <link href="css/magnific-popup.css" rel="stylesheet">
 
         <link href="css/jg-first-portfolio-style.css" rel="stylesheet">
-        
+
+        <meta name="google-adsense-account" content="ca-pub-1953071189053008">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1953071189053008"
      crossorigin="anonymous"></script>
     </head>
